base/app-homeassistant-piper-whisper.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - secretName: homeassistant-certs
    hosts:
    - prod-homeassistant.kotimme.cc
  rules:
  - host: prod-homeassistant.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              name: homeassistant
---
apiVersion: v1
kind: Service
metadata:
    name: homeassistant
spec:
    ports:
      - name: homeassistant
        port: 80
        targetPort: homeassistant
    selector:
        app: homeassistant
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  serviceName: "homeassistant"
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
#      securityContext:
#        runAsUser: 1978
#        runAsGroup: 1978
#        fsGroup: 1978
#      imagePullSecrets:
#        - name: ghcr-io
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
              - NET_BROADCAST
        ports:
        - name: homeassistant
          containerPort: 8123
        volumeMounts:
        - name: dir
          mountPath: /config
          subPath: homeassistant
          
      - name: piper
        image: rhasspy/wyoming-piper:latest
        imagePullPolicy: IfNotPresent
        args:
        - --voice
        - fi_FI-harri-medium
        ports:
        - name: piper
          containerPort: 10200
        volumeMounts:
        - name: dir
          mountPath: /data
          subPath: piper
          
      - name: whisper
        image: rhasspy/wyoming-whisper:latest
        imagePullPolicy: IfNotPresent
        args:
        - --model
        - tiny-int8
        - --language
        - fi
        ports:
        - name: whisper
          containerPort: 10300
        volumeMounts:
        - name: dir
          mountPath: /data
          subPath: whisper
          
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
        - name: time
